--- a/H5/Cup/Cup.vcxproj.filters
+++ b/H5/Cup/Cup.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="N6.cpp">
+    <ClCompile Include="S.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
