--- a/POW/POW/POW.vcxproj
+++ b/POW/POW/POW.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{18099c3d-d6b8-491a-bdaa-3ca44843bf4a}</ProjectGuid>
-    <RootNamespace>N6</RootNamespace>
+    <ProjectGuid>{8db6f44b-28e0-4581-9682-d0696c3e4446}</ProjectGuid>
+    <RootNamespace>POW</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="N6.cpp" />
+    <ClCompile Include="POW.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
