--- a/POW/POW/POW.vcxproj.filters
+++ b/POW/POW/POW.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="N6.cpp">
+    <ClCompile Include="POW.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
